Removed underlines from header list anchors and made color inherit

--- a/css_syntax_exercise/assets/css_syntax_exercise.css
+++ b/css_syntax_exercise/assets/css_syntax_exercise.css
@@ -21,3 +21,11 @@ ol li {
 header > img {
     width: 100px;
 }
+
+nav ul li a {
+    text-decoration: none;
+}
+
+nav ul li a {
+    color: inherit;
+}
